--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </h2>
         <div class="services-list">
 
-            <div class="service-textbox">
+            <div class="service-textbox a">
 
                 <h3 class="tertiary-text">
                     Building Homes and Offices
@@ -47,29 +47,30 @@
                     renovation, we create durable, stylish, and functional environments that meet your needs.
                 </p>
             </div>
-            <img src="house-6.jpeg" alt="a building" class="service-img">
+            <img src="house-6.jpeg" alt="a building" class="service-img b">
 
 
-            <img src="daniel-mccullough-HtBlQdxfG9k-unsplash.jpg" alt="the plans of a building" class="service-img">
-            <div class="service-textbox">
+            <img src="daniel-mccullough-HtBlQdxfG9k-unsplash.jpg" alt="the plans of a building"
+                class="service-img img d">
+            <div class="service-textbox txt c">
 
                 <h3 class="tertiary-text">
-                    Drawing out architectural plans
+                    Drawing out Architectural Plans
                 </h3>
                 <p class="hero-p">We create detailed, functional, and innovative architectural plans tailored to
                     your vision, ensuring precision, efficiency, and structural excellence.</p>
 
             </div>
 
-            <div class="service-textbox">
+            <div class="service-textbox e">
 
                 <h3 class="tertiary-text">
-                    Supply of quality building materials
+                    Supply of Quality Building Materials
                 </h3>
-                <p class="hero-p">We supply durable, high-grade building materials to ensure strength, safety, and
-                    longevity for your projects.</p>
+                <p class="hero-p">We create detailed, functional, and innovative architectural plans tailored to
+                    your vision, ensuring precision, efficiency, and structural excellence.</p>
             </div>
-            <img src="markus-winkler-HtLkTOr_DQc-unsplash.jpg" alt="building materials" class="service-img">
+            <img src="markus-winkler-HtLkTOr_DQc-unsplash.jpg" alt="building materials" class="service-img f">
 
 
         </div>
@@ -146,7 +147,7 @@
                         d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
                 </svg>
 
-                <p class="footer-p">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+                <p class="footer-p address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
             </li>
         </ul>
         <p class="copyright">
